# LLMOD

./: .gitignore  ARCHITECTURE-WINUI3.md  App.xaml  App.xaml.cs  CHANGELOG.md  COVAS_ELITE_DANGEROUS_SETUP.md  Directory.Build.props  Directory.Build.targets  FIXED-INSTALLATION.md  HouseVictoria.sln  HouseVictoria_Development_Roadmap.md  HouseVictoria_Documentation.md  HouseVictoria_MemoryDesign.md  HouseVictoria_UserGuide.md  INSTALLATION-FIXED.md  LLMOD-Overlay.bat  LLMOD.csproj  LLMOD.slnx  MT4_INTEGRATION_SUMMARY.md  MainWindow.xaml  MainWindow.xaml.cs  README-OVERLAY.md  README-WINUI3-IMPLEMENTATION.md  README.md  START-GUIDE.md  WINUI3-TROUBLESHOOTING.md  comfyui-launcher.cmd  extra_model_paths_d_comfyui.yaml  install-overlay.bat  install.bat  install.ps1  main.js  package-lock.json  package.json  quick-fix.bat  shared-styles.css  start-all.js  start-modules-pure.js  start.bat  stop-all.bat  (+3 more)
.github/: copilot-instructions.md
.ps1 scripts/: start-kokoro.ps1  (+4 more)
Central Core/MainAccessToMcpServer/: pyproject.toml
Central Core/MainAccessToMcpServer/AgentToolsServer/: __init__.py  server.py
Central Core/MainAccessToMcpServer/LtmMcpServer/: __init__.py  server.py
Central Core/MainAccessToMcpServer/ResourceBankServer/: __init__.py  server.py
Central Core/MainAccessToMcpServer/ttsModelsServer/: __init__.py  server.py
MCPServer/: .env  INTEGRATION_GUIDE.md  MCP_SERVER_FIX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  http_server.py  pyproject.toml  pyrightconfig.json  setup.bat
MCPServer/data/: memory.db
MCPServer/house_victoria_mcp/: __init__.py  __main__.py  config.py  logger.py  server.py
MCPServer/house_victoria_mcp/agent/: __init__.py  agent_reference_implementation.py
MCPServer/house_victoria_mcp/memory/: __init__.py  memory_manager.py  storage.py  vector_search.py
MCPServer/house_victoria_mcp/tt/: __init__.py  progress_tracker.py  task_manager.py  workflow_engine.py
(+250 files in other folders)
