[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmod_mcp_servers"
version = "1.0.0"
description = "LLMOD MCP Servers for AI integration"
authors = [
    {name = "LLMOD Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0"
]

[tool.hatch.build.targets.wheel]
packages = [
    "LtmMcpServer",
    "ResourceBankServer", 
    "AgentToolsServer",
    "ttsModelsServer"
]